--- a/index.html
+++ b/index.html
@@ -740,9 +740,9 @@ function showChromaticWin(){
    function createSpark() {
       const spark = document.createElement("div");
       spark.className = "spark";
-      spark.textContent = "✦""⋆"
-"·"
-"✧"
+      spark.textContent = "✦";"⋆";
+"·";
+"✧";
 "˙";
 
       spark.style.fontSize = (8 + Math.random() * 8) + "px";
