--- a/index.html
+++ b/index.html
@@ -121,11 +121,19 @@ button:hover { background: #00000000; }
   cursor: pointer;
 }
 
-/* ✨ Flow Light Effect */
+#copyright {
+  position: relative; /* wichtig, damit flowLight sich relativ dazu positioniert */
+  display: inline-block;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 0.8em;
+}
+
 #flowLight {
   position: absolute;
-  top: 40px;
-  right: 40px;
+  top: 50%;        /* vertikal Mitte des ©️ */
+  left: 50%;       /* horizontal Mitte des ©️ */
+  transform: translate(-50%, -50%); /* exakte Zentrierung */
   width: 6px;
   height: 6px;
   background: ✨;
@@ -140,18 +148,18 @@ button:hover { background: #00000000; }
 
 @keyframes flowLightPulse {
   0% {
-    transform: scale(0.3);
+    transform: translate(-50%, -50%) scale(0.3);
     opacity: 0;
   }
   20% {
     opacity: 1;
   }
   60% {
-    transform: scale(1.4);
+    transform: translate(-50%, -50%) scale(1.4);
     opacity: 0.6;
   }
   100% {
-    transform: scale(2);
+    transform: translate(-50%, -50%) scale(2);
     opacity: 0;
   }
 }
@@ -160,6 +168,7 @@ button:hover { background: #00000000; }
 <body>
  
  <div id="startScreen">
+ <div id="copyright">
  <div id="flowLight"></div> 
    <img src="IMG_1244.jpeg" alt="BrainTrials Logo">
 </div>
