--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@ button:hover { background: #00000000; }
     top: 50%;
     left: 55%;
     transform: translate(-50%, -50%);
-    width: 30px;
-    height: 30px;
+    width: 27px;
+    height: 27px;
     border-radius: 50%;
-    background: gold;
+    background: white;
     cursor: pointer;
     z-index: 4000;
     box-shadow: 0 0 10px 3px gold;
