--- a/index.html
+++ b/index.html
@@ -143,14 +143,16 @@ button:hover { background: #00000000; }
 <div id="treasure" title="Click me!" style="
     position: absolute;
     top: 50%;
-    left: 48%;
+    left: 49%;
     transform: translate(-50%, -50%);
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     background: gold;
     cursor: pointer;
     z-index: 4000;
+    animation: pulseGlow 2s infinite alternate;
+    cursor: pointer; /* damit man weiß, dass es klickbar ist */
     box-shadow: 0 0 10px 3px gold;
 "></div>
   <img src="IMG_1244.jpeg" alt="BrainTrials Logo">
