--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ button:hover { background: #00000000; }
   border-radius: 50%;
   background: none;
   box-shadow: none;
-  animation: none;
+  animation: pulseGlow 2s infinite alternate;
   pointer-events: none;
 }
 </style>
@@ -143,7 +143,7 @@ button:hover { background: #00000000; }
 <div id="treasure" title="Click me!" style="
     position: absolute;
     top: 50%;
-    left: 49%;
+    left: 56%;
     transform: translate(-50%, -50%);
     width: 25px;
     height: 25px;
