--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ button:hover { background: #00000000; }
   100% { transform: scale(1); opacity: 1; }
 }
 .puls {
-  position: none;
+  position: absolute;
   width: 6px;
   height: 6px;
   border-radius: 50%;
@@ -141,7 +141,7 @@ button:hover { background: #00000000; }
  <div id="startScreen">
   <!-- Schatz versteckt -->
 <div id="treasure" title="Click me!" style="
-    position: none;
+    position: absolute;
     top: 47.6%;
     left: 49%;
     transform: translate(-50%, -50%);
