--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@ window.onclick = (e) => {
 };
   
 // ========================== VARIABLES ==========================
+let startTimer = null;
+let startTimerStarted = false;
 let stage='start', wordScore=0, ticScore={player:0,ai:0,draw:0};
 let currentWord='', usedWords=[], wordList=[];
 let board=[], gameOver=false;
