--- a/index.html
+++ b/index.html
@@ -473,11 +473,7 @@ function startTicTacToe(){
     <div id="boardWrapper"><div id="board"></div></div>
     <div id="timer">10</div>
     <div id="message"></div>
-    <div id="scoreboard">  
-    Player: <span class="scoreValue">0</span> | 
-    AI: <span class="scoreValue">0</span> | 
-    Draws: <span class="scoreValue">0</span>
-</div>
+    <div id="scoreboard">Player: 0 | AI: 0 | Draws: 0</div>
     <div id="level">
       Level: 
       <select id="levelSelect">
