--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@ body {
   font-family: 'Press Start 2P', cursive;
 }
  #scoreboard {
+  margin-top: 10px;
   color: white;
   font-size: 0.8em
   /* Schrift anpassen */
   font-family: 'Press Start 2P', cursive;
-
 }
- 
+ .scoreValue {
+  font-size: 0.8em; /* kleiner als der normale Text */
+  font-family: 'Press Start 2P', cursive;
+}
   #tipButton {
   position: fixed;
   bottom: 20px;
