Refactor scoreboard display with span elements
Updated scoreboard to use span elements for scores.

--- a/index.html
+++ b/index.html
@@ -468,7 +468,10 @@ function startTicTacToe(){
     <div id="boardWrapper"><div id="board"></div></div>
     <div id="timer">10</div>
     <div id="message"></div>
-    <div id="scoreboard">Player: 0 | AI: 0 | Draws: 0</div>
+    <div id="scoreboard">  
+     Player: <span class="scoreValue">Player</span> | 
+     AI: <span class="scoreValue">AI</span> | 
+     Draws: <span class="scoreValue">Draws</span></div>
     <div id="level">
       Level: 
       <select id="levelSelect">
