--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ body {
   font-family: 'Press Start 2P', cursive;
 }
  #scoreboard {
-  font-size: 0.05em
+  font-size: 0.3em
   color: white;
 /* Schrift anpassen */
   font-family: 'Press Start 2P', cursive;
 }
  .scoreValue {
-  font-size: 0.05em; /* kleiner als der normale Text */
+  font-size: 0.3em; /* kleiner als der normale Text */
   font-family: 'Press Start 2P', cursive;
 }
   #tipButton {
@@ -544,7 +544,11 @@ function mediumMove(){for(let i=0;i<9;i++){if(board[i]===''){board[i]='O'; if(ch
 function hardMove(){let best=-Infinity; let move; for(let i=0;i<9;i++){if(board[i]===''){board[i]='O'; let s=minimax(board,0,false); board[i]=''; if(s>best){best=s; move=i;}}} return move;}
 function minimax(b,d,max){if(checkWinner('O')) return 10-d; if(checkWinner('X')) return d-10; if(b.every(c=>c!=='')) return 0; if(max){let best=-Infinity; for(let i=0;i<9;i++){if(b[i]===''){b[i]='O'; best=Math.max(best,minimax(b,d+1,false)); b[i]='';}} return best;} else{let best=Infinity; for(let i=0;i<9;i++){if(b[i]===''){b[i]='X'; best=Math.min(best,minimax(b,d+1,true)); b[i]='';}} return best;}}
 function checkWinner(p){const w=[[0,1,2],[3,4,5],[6,7,8],[0,3,6],[1,4,7],[2,5,8],[0,4,8],[2,4,6]]; return w.some(x=>x.every(i=>board[i]===p));}
-function updateScore(){document.getElementById('scoreboard').textContent=` Player: ${ticScore.player}|AI: ${ticScore.ai}|Draws:  ${ticScore.draw}`;}
+function updateScore(){document.getElementById('scoreboard').innerHTML = `
+  Player: <span class="scoreValue">${ticScore.player}</span> | 
+  AI: <span class="scoreValue">${ticScore.ai}</span> | 
+  Draws: <span class="scoreValue">${ticScore.draw}</span>
+`;}
 
 // ========================== MATH CHALLENGE ==========================
 function startMathChallenge(){
