--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
   font-family: 'Press Start 2P', cursive;
 }
  #scoreboard {
-  font-size: 0.3em
+  font-size: 0.3em;
   color: white;
 /* Schrift anpassen */
   font-family: 'Press Start 2P', cursive;
@@ -469,9 +469,9 @@ function startTicTacToe(){
     <div id="timer">10</div>
     <div id="message"></div>
     <div id="scoreboard">  
-     Player: <span class="scoreValue"></span> | 
-     AI: <span class="scoreValue"></span> | 
-     Draws: <span class="scoreValue"></span></div>
+     Player: <span class="scoreValue">0</span> | 
+     AI: <span class="scoreValue">0</span> | 
+     Draws: <span class="scoreValue">0</span></div>
     <div id="level">
       Level: 
       <select id="levelSelect">
