Update level display in index.html

--- a/index.html
+++ b/index.html
@@ -473,8 +473,9 @@ function startTicTacToe(){
      AI: <span class="scoreValue">AI;0</span> | 
      Draws: <span class="scoreValue">Draws;0</span></div>
     <div id="level">
-      Level: 
+      Level: <span class="scoreValue">Level</span>
       <select id="levelSelect">
+        option: <span class="scoreValue">Easy</span>
         <option value="easy">Easy</option>
         <option value="medium" selected>Medium</option>
         <option value="hard">Hard</option>
