--- a/index.html
+++ b/index.html
@@ -471,10 +471,11 @@ function startTicTacToe(){
     <div id="scoreboard">  
      Player: <span class="scoreValue">Player;0</span> | 
      AI: <span class="scoreValue">AI;0</span> | 
-     Draws: <span class="scoreValue">Draws;0</span></div>
+     Draws: <span class="scoreValue">Draws;0</span>
+    </div>
     <div id="level">
       Level: 
-      <select id="levelSelect">
+       <select id="levelSelect">
         <option value="easy">Easy</option>
          <option value="medium" selected>Medium</option>
         <option value="hard">Hard</option>
@@ -547,7 +548,7 @@ function checkWinner(p){const w=[[0,1,2],[3,4,5],[6,7,8],[0,3,6],[1,4,7],[2,5,8]
 function updateScore(){document.getElementById('scoreboard').innerHTML = `
   Player: <span class="scoreValue">${ticScore.player}</span> | 
   AI: <span class="scoreValue">${ticScore.ai}</span> | 
-  Draws: <span class="scoreValue">${ticScore.draw}</span>
+  Draws: <span class="scoreValue">${ticScore.draws}</span>
 `;}
 
 // ========================== MATH CHALLENGE ==========================
