--- a/index.html
+++ b/index.html
@@ -466,9 +466,9 @@ function startTicTacToe(){
     <div id="timer">10</div>
     <div id="message"></div>
     <div id="scoreboard">  
-    Player: <span class="scoreValue">Player;0</span> | 
-    AI: <span class="scoreValue">AI;0</span> | 
-    Draws: <span class="scoreValue">Draws;0</span>
+    Player: <span class="scoreValue"></span> | 
+    AI: <span class="scoreValue"></span> | 
+    Draws: <span class="scoreValue"></span>
   </div>
     <div id="level">
       Level: 
