--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ are essential to advance.
   else if(stage === 'math') tipText = `
       <p>Math Challenge Tips:</p>
     <ul>
-      <li>Follow order 4 operations...</li>
+      <li>Follow order 4 operations......</li>
       <li>Solve quickly time is running!</li>
       <li>Correct answers let you advance</li>
       <li>Wrong answers,send you back.</li>
@@ -659,7 +659,7 @@ function startChromaticTrial(){
     
     <div id="chromaticWinText" style="
       position: fixed;
-      top: 60%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       font-family: 'Press Start 2P', cursive;
