--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@ body {
   pointer-events: none;
   transition: opacity 0.6s ease;
 
+  
+.fragment {
+  position: absolute;
+  width: 6px;  /* kleine Partikel */
+  height: 6px;
+  background: gold;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: fragmentFly 1s forwards;
+  pointer-events: none;
+  z-index: 5000;
+}
+
+@keyframes fragmentFly {
+  0%   { transform: translate(-50%, -50%) scale(1); opacity:1; }
+  50%  { transform: translate(calc(-50% + var(--x)), calc(-50% + var(--y))) scale(1.2); opacity:0.8; }
+  100% { transform: translate(calc(-50% + var(--x)*1.5), calc(-50% + var(--y)*1.5)) scale(0.5); opacity:0; }
 }
 
 #tipButton {
@@ -875,6 +894,21 @@ setTimeout(() => {
   if (btn) {
   btn.style.opacity = '1';
   btn.style.pointerEvents = 'auto';
+       // === GLITZER/FRAGMENT-EFFEKT ===
+    const parts = 10; // Anzahl Partikel
+    for (let i = 0; i < parts; i++) {
+      const frag = document.createElement('div');
+      frag.className = 'fragment';
+      
+      // Zufällige Richtung
+      frag.style.setProperty('--x', (Math.random() * 100 - 50) + 'px');
+      frag.style.setProperty('--y', (Math.random() * 100 - 50) + 'px');
+
+      btn.appendChild(frag);
+
+      // Partikel nach Animation entfernen
+      frag.addEventListener('animationend', () => frag.remove());
+    }
   }
 }, 90000);
 
