--- a/index.html
+++ b/index.html
@@ -30,54 +30,6 @@ body {
   transition: opacity 0.6s ease;
 
 }
-  
-/* Glassplitter-Animation */
-.glass-button {
-  position: fixed;
-  opacity: 0;
-  pointer-events: none;
-  font-family: 'Press Start 2P', cursive;
-  font-size: 1em;
-  padding: 12px 25px;
-  border: none;
-  border-radius: 10px;
-  background: #808080;
-  color: white;
-  cursor: pointer;
-  z-index: 500;
-}
-
-/* Container für Splitter */
-.glass-button.shattered {
-  animation: assembleGlass 1s forwards;
-}
-
-
-
-/* Keyframes: Splitter kommen zusammen */
-@keyframes assembleGlass {
-  0% {
-    opacity: 0;
-  }
-  10% {
-    opacity: 1;
-  }
-  20% {
-    transform: translate(-50px,-50px) rotate(-45deg);
-  }
-  40% {
-    transform: translate(30px,40px) rotate(30deg);
-  }
-  60% {
-    transform: translate(-20px,20px) rotate(-15deg);
-  }
-  80% {
-    transform: translate(10px,-10px) rotate(5deg);
-  }
-  100% {
-    transform: translate(0,0) rotate(0deg);
-  }
-}
 
 #tipButton {
   position: fixed;
@@ -134,7 +86,7 @@ body {
   max-width: 400px;
   color: white;
   text-align: left;
-  max-height: 75vh; /* maximale Höhe */
+  max-height: 70vh; /* maximale Höhe */
   overflow-y: auto;  /* scrollen, wenn Text zu lang ist */
 }
 .close {
@@ -270,7 +222,7 @@ button:hover { background: #00000000; }
 </div>
   <div id="gameContainer">
   <h1></h1>
- <button id="startButton" class="glass-button" onclick="startWordChain()">START</button> 
+ <button id="startButton" onclick="startWordChain()">START</button> 
 </div>
   <!-- Tip Button -->
 <button id="tipButton">
@@ -923,10 +875,8 @@ setTimeout(() => {
   if (btn) {
   btn.style.opacity = '1';
   btn.style.pointerEvents = 'auto';
-  // Zerbrechen-Effekt
-  btn.classList.add('shattered');
   }
- }, 90000);
+}, 90000);
 
 </script>
 </body>
