--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@ button:hover { background: #00000000; }
   "></div>
   <img src="IMG_1244.jpeg" alt="BrainTrials Logo">
 </div>
+  <!-- Video Layer -->
+<div id="videoLayer" style="display:none; position:fixed; inset:0; z-index:500; background:black;">
+  <video id="bgVideo" autoplay muted loop playsinline style="width:100%; height:100%; object-fit:cover;">
+    <source src="formula.mp4" type="video/mp4">
+  </video>
+  <div style="position:absolute; bottom:5px; right:5px; color:white; font-size:0.8em;">
+    <a href="https://www.vecteezy.com/free-videos/formula" target="_blank" style="color:white;">Formula Stock Videos by Vecteezy</a>
+  </div>
+
   <div id="gameContainer">
   <h1></h1>
  <button id="startButton" onclick="startWordChain()">START</button> 
@@ -847,7 +856,9 @@ treasure.onclick = (e) => {
     document.body.appendChild(spark);
     setTimeout(() => spark.remove(), 1000);
   }
-
+  // Jetzt Video einblenden
+  const videoLayer = document.getElementById('videoLayer');
+  videoLayer.style.display = 'block';
   // Text anzeigen
   const msg = document.createElement('div');
   msg.textContent = "Welcome";
