--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@ body {
 }
 .close:hover { color: #00000000; }
  
-h1 { font-size: 1.8em; margin-bottom: 20px; color: #00000000; font-family: 'Press Start 2P', cursive; }
+h1 { font-size: 1.8em; margin-bottom: 20px; color: #808080; font-family: 'Press Start 2P', cursive; }
 #task, #wordDisplay { font-size: 1.4em; margin: 20px 0; min-height: 50px; font-family: 'Press Start 2P', cursive; word-break: keep-all; }
 #inputContainer { display: flex; flex-direction: column; align-items: center; }
 #playerWord, #answer { width: 80%; max-width: 400px; font-size: 1em; padding: 10px; border-radius: 10px; border: none; margin-bottom: 15px; text-align: center; box-sizingss: border-box; font-family: 'Press Start 2P', cursive; }
-button { padding: 12px 25px; font-size: 1em; border: none; border-radius: 10px; background: #00000000; color: #808080; cursor: pointer; transition: all 0.2s; font-family: 'Press Start 2P', cursive; }
+button { padding: 12px 25px; font-size: 1em; border: none; border-radius: 10px; background: #808080; color: black; cursor: pointer; transition: all 0.2s; font-family: 'Press Start 2P', cursive; }
 button:hover { background: #00000000; }
 #message { margin-top: 20px; font-size: 1em; min-height: 40px; font-family: 'Press Start 2P', cursive; }
 #timer { margin-top: 15px; font-size: 1em; font-weight: bold; font-family: 'Press Start 2P', cursive; }
@@ -275,7 +275,7 @@ setTimeout(() => {
     // ❕ beginnt sanft zu pulsieren (Modal ist zu)
     tipButton.classList.add('pulsing');
   }, 2000); // Dauer des Rollen-Effekts (2 Sekunden)
-}, 60000); // ganze Sequenz startet nach 6 Sekunden
+}, 10000); // ganze Sequenz startet nach 6 Sekunden
 
 
 const tipModal = document.getElementById('tipModal');
