--- a/index.html
+++ b/index.html
@@ -465,11 +465,9 @@ function playWord(){
   let word=input.value.trim(); word=word.charAt(0).toUpperCase()+word.slice(1);
   const message=document.getElementById('message');
   if(!word) return;
-   
-  
-  // <-- HIER direkt nach dem Trim einfügen:
+    // <-- HIER direkt nach dem Trim einfügen:
   // ❌ Nur Buchstaben erlaubt
-  if (!/^[a-zA-Z]/.test(word)) {
+  if (!/^[a-zA-Z]+$/.test(word)) {
     showWordError("Wrong");
     return;
 }
