--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ function playWord(){
   if(!word) return;
     // <-- HIER direkt nach dem Trim einfügen:
   // ❌ Nur Buchstaben erlaubt
-  if (!/^[a-zA-Z]+$/.test(word)) {
+  if (/[a-zA-Z]/.test(word)) {
     showWordError("Wrong");
     return;
 }
