--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@ function restartGame(){
   clearInterval(chromaticTimerInterval);
   clearInterval(mathTimerInterval);
   clearTimeout(uniformTimeout);
-  wrongAttempts = 0; // 🔑 WICHTIG
+  clearIntervak(wrongAttempts = 0); // 🔑 WICHTIG
   // Variablen zurücksetzen
   stage = 'start';
   wordScore = 0;
